update notebooks and Bloomberg DB

--- a/labs/lab02_survivorship_bias.ipynb
+++ b/labs/lab02_survivorship_bias.ipynb
@@ -115,7 +115,7 @@
         "\n",
         "### Load and Prepare Data"
       ],
-      "id": "c05a52e0-071f-4cd9-9574-7869612c8438"
+      "id": "9bd55a17-5bd3-4ecb-a25b-f8ef9fffec2d"
     },
     {
       "cell_type": "code",
@@ -127,9 +127,10 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Load the Bloomberg-extracted data\n",
-        "# Replace this path with your actual file location\n",
-        "data_path = \"../data/bloomberg_database/uk_banks_2005_2010_with_failures.csv\"\n",
+        "# Load the Bloomberg-extracted data (data_root from config, or repo data/)\n",
+        "data_path = data_root / \"bloomberg_database/uk_banks_2005_2010_with_failures.csv\"\n",
+        "if not data_path.exists():\n",
+        "    data_path = Path(\"../data/bloomberg_database/uk_banks_2005_2010_with_failures.csv\")\n",
         "\n",
         "# For this lab, we'll create example data matching real patterns\n",
         "# In practice, you would load your Bloomberg extraction\n",
@@ -175,7 +176,7 @@
       "source": [
         "### Calculate Returns"
       ],
-      "id": "91854902-f023-4caa-86e5-23f739a3f6a6"
+      "id": "b15fd260-fb93-439d-b8a2-8df575d5ffaf"
     },
     {
       "cell_type": "code",
@@ -205,7 +206,7 @@
       "source": [
         "### Quantify Survivorship Bias"
       ],
-      "id": "da1eba5b-c8d1-4306-ab2d-f706c835812f"
+      "id": "ce770403-7022-43fa-908f-19606c924fc0"
     },
     {
       "cell_type": "code",
@@ -263,7 +264,7 @@
       "source": [
         "### Visualise the Difference"
       ],
-      "id": "dde162f2-1e72-40a3-b779-76762532ffd3"
+      "id": "ecf6bf6e-802a-491d-af48-1b99ddf259b7"
     },
     {
       "cell_type": "code",
@@ -383,7 +384,7 @@
         "\n",
         "For students interested in production systems:"
       ],
-      "id": "78c5840d-6660-4c90-891a-788c314cce19"
+      "id": "94795e50-abfb-4421-adf3-edfcb89a7f2b"
     },
     {
       "cell_type": "code",
@@ -464,7 +465,7 @@
         "    and Mutual Fund Performance: Relevance, Significance, and Methodical\n",
         "    Differences. *Review of Finance*, 15(2), 441-474."
       ],
-      "id": "fcb57de6-1bf3-4845-b103-4a1a2c5a1852"
+      "id": "3aaa33c2-f74e-4402-bdc0-96abf6771565"
     }
   ],
   "nbformat": 4,
