--- a/labs/lab02_survivorship_bias_bloomberg.ipynb
+++ b/labs/lab02_survivorship_bias_bloomberg.ipynb
@@ -135,7 +135,7 @@
         "\n",
         "### Load and Prepare Data"
       ],
-      "id": "53b73f47-12f2-489f-bf80-f1bdb60f8562"
+      "id": "294181c9-a413-4255-b594-2d5aef968822"
     },
     {
       "cell_type": "code",
@@ -147,9 +147,18 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Load the Bloomberg-extracted data\n",
-        "# Replace this path with your actual file location\n",
-        "data_path = \"../data/bloomberg_database/uk_banks_2005_2010_with_failures.csv\"\n",
+        "# Load the Bloomberg-extracted data (data_root from config, or repo data/)\n",
+        "from pathlib import Path\n",
+        "import yaml\n",
+        "try:\n",
+        "    with open(Path(\"config/data_root.yml\")) as f:\n",
+        "        cfg = yaml.safe_load(f)\n",
+        "    data_root = Path(cfg.get(\"data_root\", \"data\")).expanduser().resolve()\n",
+        "except Exception:\n",
+        "    data_root = Path(\"data\")\n",
+        "data_path = data_root / \"bloomberg_database/uk_banks_2005_2010_with_failures.csv\"\n",
+        "if not data_path.exists():\n",
+        "    data_path = Path(\"../data/bloomberg_database/uk_banks_2005_2010_with_failures.csv\")\n",
         "\n",
         "# For this lab, we'll create example data matching real patterns\n",
         "# In practice, you would load your Bloomberg extraction\n",
@@ -195,7 +204,7 @@
       "source": [
         "### Calculate Returns"
       ],
-      "id": "1ca17ee4-43b2-4d7a-b624-96c49bf9b25e"
+      "id": "45b80d35-8913-434c-9403-475333d665dd"
     },
     {
       "cell_type": "code",
@@ -225,7 +234,7 @@
       "source": [
         "### Quantify Survivorship Bias"
       ],
-      "id": "2712d8c5-a6af-44d2-9405-b2d1e908c8b9"
+      "id": "c910e750-7836-427f-b122-416010dcf390"
     },
     {
       "cell_type": "code",
@@ -283,7 +292,7 @@
       "source": [
         "### Visualise the Difference"
       ],
-      "id": "415a9fe0-76d5-4769-9e23-eea7ea8ecc11"
+      "id": "8a19df94-9420-4cec-bf66-b502719f3c0f"
     },
     {
       "cell_type": "code",
@@ -403,7 +412,7 @@
         "\n",
         "For students interested in production systems:"
       ],
-      "id": "6c2a466d-c5eb-4510-a8f7-68156ef7be8a"
+      "id": "b46f854c-567e-49a1-aa7e-d27c8e1b15d4"
     },
     {
       "cell_type": "code",
@@ -484,7 +493,7 @@
         "    and Mutual Fund Performance: Relevance, Significance, and Methodical\n",
         "    Differences. *Review of Finance*, 15(2), 441-474."
       ],
-      "id": "bfb1e65a-647d-4a52-87b2-b5b4f73c89d0"
+      "id": "1b3088ef-96e8-422e-9d57-a5dbd0da6e21"
     }
   ],
   "nbformat": 4,
