--- a/labs/lab07_crypto.ipynb
+++ b/labs/lab07_crypto.ipynb
@@ -108,7 +108,7 @@
         "\n",
         "## Setup and Dependencies"
       ],
-      "id": "f982fe58-a005-45f8-9b4d-4a08d247fb89"
+      "id": "8e97c648-d088-4afb-a18c-462a3e28646f"
     },
     {
       "cell_type": "code",
@@ -152,7 +152,7 @@
         "\n",
         "print(\"✓ Setup complete - ready for crypto market analysis\")"
       ],
-      "id": "fe2e8710"
+      "id": "307392c1"
     },
     {
       "cell_type": "markdown",
@@ -192,7 +192,7 @@
         "\n",
         "### Loading Bloomberg Data from GitHub"
       ],
-      "id": "886099d5-b6de-47cd-9b3a-d9fbe67dfa84"
+      "id": "7fea8d3a-8a22-4076-80d7-e72300e04821"
     },
     {
       "cell_type": "code",
@@ -229,16 +229,16 @@
         "        print(f\"⚠️  Could not load from GitHub Pages: {e}\")\n",
         "        pass\n",
         "    \n",
-        "    # Fallback to local file (if running on campus with repo)\n",
-        "    try:\n",
-        "        local_path = 'data/chapter07/crypto_bloomberg.csv'\n",
-        "        df = pd.read_csv(local_path, parse_dates=['date'])\n",
-        "        df = df.set_index('date')\n",
-        "        print(f\"✅ Loaded local Bloomberg data: {len(df)} rows\")\n",
-        "        return df\n",
-        "    except FileNotFoundError:\n",
-        "        print(f\"⚠️  Local file not found\")\n",
-        "        return None\n",
+        "    # Fallback to data root (config) or repo data/\n",
+        "    for local_path in [data_root / \"chapter07/crypto_bloomberg.csv\", Path(\"data/chapter07/crypto_bloomberg.csv\")]:\n",
+        "        try:\n",
+        "            df = pd.read_csv(local_path, parse_dates=['date'])\n",
+        "            df = df.set_index('date')\n",
+        "            print(f\"✅ Loaded local Bloomberg data: {len(df)} rows\")\n",
+        "            return df\n",
+        "        except (FileNotFoundError, OSError):\n",
+        "            continue\n",
+        "    return None\n",
         "\n",
         "# Load Bitcoin data from Bloomberg Terminal\n",
         "print(\"Loading cryptocurrency data from Bloomberg Terminal...\")\n",
@@ -283,7 +283,7 @@
         "    print(\"\\nSample data:\")\n",
         "    print(btc_data.head())"
       ],
-      "id": "b9107d91"
+      "id": "a02ac8fb"
     },
     {
       "cell_type": "markdown",
@@ -291,7 +291,7 @@
       "source": [
         "### Visualizing Price Trends"
       ],
-      "id": "5ee2b794-a1b7-43bd-acc3-2d313949ec88"
+      "id": "ffbe8eaa-d780-44a8-8971-f0d938783d70"
     },
     {
       "cell_type": "code",
@@ -355,7 +355,7 @@
         "    print(f\"  Price Range: ${min_price:,.0f} - ${max_price:,.0f}\")\n",
         "    print(f\"  Max Drawdown: {drawdown:.1f}%\")"
       ],
-      "id": "35cd8070"
+      "id": "dcf04e66"
     },
     {
       "cell_type": "markdown",
@@ -382,7 +382,7 @@
         "\n",
         "### Calculating Returns and Volatility"
       ],
-      "id": "c3be9438-7544-45b7-b21c-3d004250fd13"
+      "id": "65bb82be-1110-47f8-af01-eeb24dfc3551"
     },
     {
       "cell_type": "code",
@@ -490,7 +490,7 @@
         "print(\"Treasury Bonds: Annual Vol ~5-8%, Skew ~0.0, Kurtosis ~3-4\")\n",
         "print(\"\\nCryptocurrency volatility is 3-5x higher than traditional assets!\")"
       ],
-      "id": "6014c8cd"
+      "id": "f65d0460"
     },
     {
       "cell_type": "markdown",
@@ -498,7 +498,7 @@
       "source": [
         "### Visualizing Return Distributions"
       ],
-      "id": "9d3533c6-b36f-4c6e-bed5-8a05c6ae53eb"
+      "id": "7f4a002d-64f1-4de6-a41d-f2cd1822d124"
     },
     {
       "cell_type": "code",
@@ -574,7 +574,7 @@
         "\n",
         "print(\"\\n💡 Returns exhibit fat tails and deviate significantly from normal distribution!\")"
       ],
-      "id": "0fc6cd24"
+      "id": "db8954f1"
     },
     {
       "cell_type": "markdown",
@@ -582,7 +582,7 @@
       "source": [
         "### Correlation Analysis"
       ],
-      "id": "afebeb61-be03-4d51-82f2-94e74197a1cc"
+      "id": "5fa4d7e7-4953-426d-b65c-6ea1133f62fb"
     },
     {
       "cell_type": "code",
@@ -654,7 +654,7 @@
         "      f\"Std={rolling_corr_btc_eth.std():.3f}\")\n",
         "print(\"Note: Correlation increases during volatile periods (contagion effect)\")"
       ],
-      "id": "1a2aa6ed"
+      "id": "7c9b260d"
     },
     {
       "cell_type": "markdown",
@@ -684,7 +684,7 @@
         "\n",
         "### Autocorrelation Analysis"
       ],
-      "id": "423ccab6-eb83-4ed7-8bc9-5c6cba3b1338"
+      "id": "0a325c68-46af-46f8-b3ca-8747132601d5"
     },
     {
       "cell_type": "code",
@@ -779,7 +779,7 @@
         "print(\"\\n💡 Interpretation: Significant autocorrelation suggests predictability (market inefficiency)\")\n",
         "print(\"   Small correlations may not be economically significant after transaction costs\")"
       ],
-      "id": "85c90f73"
+      "id": "215ebca4"
     },
     {
       "cell_type": "markdown",
@@ -787,7 +787,7 @@
       "source": [
         "### Momentum Strategy Backtest"
       ],
-      "id": "cb4bd3f5-afec-4c0c-b3ed-1fa631c4bed0"
+      "id": "1b03b3ce-9409-4bfb-87a1-83b2b21b2d68"
     },
     {
       "cell_type": "code",
@@ -914,7 +914,7 @@
         "print(\"\\n⚠️  Note: This backtest ignores transaction costs, slippage, and taxes\")\n",
         "print(\"    Real-world implementation would have lower returns\")"
       ],
-      "id": "e40c32e2"
+      "id": "8c9fa35c"
     },
     {
       "cell_type": "markdown",
@@ -922,7 +922,7 @@
       "source": [
         "### Mean Reversion Test"
       ],
-      "id": "1d476c50-9548-4302-9101-3f887bd7f6bb"
+      "id": "6a4aa843-986a-4305-b2bf-ac4ac15bdbc4"
     },
     {
       "cell_type": "code",
@@ -1008,7 +1008,7 @@
         "print(\"\\n💡 If prices follow random walk, past prices don't predict future prices\")\n",
         "print(\"   This supports weak-form market efficiency\")"
       ],
-      "id": "4f9984e3"
+      "id": "f3c4c8a6"
     },
     {
       "cell_type": "markdown",
@@ -1056,7 +1056,7 @@
         "\n",
         "**Before fitting GARCH, test for its key assumptions:**"
       ],
-      "id": "0331c57b-f175-4f49-9cae-5f8b5bb4075f"
+      "id": "8f69d46a-5cc5-4b3b-b211-2b98d2794bc6"
     },
     {
       "cell_type": "code",
@@ -1101,7 +1101,7 @@
         "print(\"\\n💡 Both tests should reject H₀ for cryptocurrency data\")\n",
         "print(\"   This justifies using GARCH with Student's t distribution\")"
       ],
-      "id": "2920546b"
+      "id": "a739ae7a"
     },
     {
       "cell_type": "markdown",
@@ -1114,7 +1114,7 @@
         "\n",
         "**Fit symmetric GARCH(1,1) and asymmetric GJR-GARCH:**"
       ],
-      "id": "5b41ea8d-a13f-4d33-a77d-aac6963f5461"
+      "id": "ace13204-ae36-44ee-be98-e8d400050b50"
     },
     {
       "cell_type": "code",
@@ -1196,7 +1196,7 @@
         "print(\"\\n💡 GARCH captures volatility spikes (2018 crash, 2020 COVID, 2021 bull run)\")\n",
         "print(\"   GJR-GARCH shows asymmetry—bad news increases volatility more\")"
       ],
-      "id": "a1ad472e"
+      "id": "90f18f57"
     },
     {
       "cell_type": "markdown",
@@ -1219,7 +1219,7 @@
         "\n",
         "**Visualize how shocks of different sizes/signs affect volatility:**"
       ],
-      "id": "d0b842ec-fbcc-4181-b7d0-a4536b08e395"
+      "id": "5bc0df73-bad3-4d2b-98be-8d415672f65e"
     },
     {
       "cell_type": "code",
@@ -1271,7 +1271,7 @@
         "print(f\"  -5% shock impact / +5% shock impact = {asymmetry_ratio:.2f}\")\n",
         "print(f\"  → Bad news increases volatility {asymmetry_ratio:.1f}× more than good news\")"
       ],
-      "id": "2c15a7c1"
+      "id": "252f0f75"
     },
     {
       "cell_type": "markdown",
@@ -1285,7 +1285,7 @@
         "**Test if GARCH forecasts future volatility accurately (Mincer-Zarnowitz\n",
         "regression):**"
       ],
-      "id": "81970138-ec86-45db-9947-75b9fde9d954"
+      "id": "4c92e874-8db8-42f4-9825-498971db71e8"
     },
     {
       "cell_type": "code",
@@ -1377,14 +1377,14 @@
         "print(\"\\n💡 GARCH forecasts Bitcoin volatility reasonably (R²~0.5-0.7)\")\n",
         "print(\"   But underestimates during extreme events (crashes, manias)\")"
       ],
-      "id": "fe574ef1"
+      "id": "24366ee7"
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "> **Connection to [Week 0, §0.6: Out-of-Sample\n",
-        "> Validation](../chapters/00_foundations.qmd#sec-model-selection)**\n",
+        "> **Connection to [Week 1, §0.6: Out-of-Sample\n",
+        "> Validation](../chapters/01_foundations.qmd#sec-model-selection)**\n",
         ">\n",
         "> **Mincer-Zarnowitz regression** tests forecast unbiasedness: - **α =\n",
         "> 0**: No systematic over/under-prediction - **β = 1**: Forecast\n",
@@ -1399,7 +1399,7 @@
         "**Test if high GARCH persistence (α+β ≈ 0.98) is real or artifact of\n",
         "regime shifts:**"
       ],
-      "id": "7068a989-8518-4dd2-b3e3-05137aeafad0"
+      "id": "3ad6c807-5bb1-4db6-9079-8ffd09820dc2"
     },
     {
       "cell_type": "code",
@@ -1487,7 +1487,7 @@
         "print(\"\\n💡 Key finding: If persistence differs across sub-periods,\")\n",
         "print(\"   full-sample GARCH is OVERESTIMATING true persistence!\")"
       ],
-      "id": "ae56a505"
+      "id": "9c6c6b17"
     },
     {
       "cell_type": "markdown",
@@ -1620,7 +1620,7 @@
         "cryptocurrency markets, connecting data to theory and claims to\n",
         "evidence.**"
       ],
-      "id": "9aa68711-7e33-43aa-b524-b0db32d48245"
+      "id": "e142189f-318e-4e92-80b7-655c490d3837"
     }
   ],
   "nbformat": 4,
