--- a/labs/lab03_time_series.ipynb
+++ b/labs/lab03_time_series.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "## Setup"
       ],
-      "id": "f997751a-4e6a-4c61-9fbc-d1a5a0d0d79b"
+      "id": "559c5d59-f876-4bac-bcd7-0f7b6159887a"
     },
     {
       "cell_type": "code",
@@ -49,7 +49,17 @@
         "# Settings\n",
         "plt.style.use('seaborn-v0_8-darkgrid')\n",
         "sns.set_palette(\"husl\")\n",
-        "np.random.seed(42)"
+        "np.random.seed(42)\n",
+        "\n",
+        "# Data root (config/data_root.yml or repo data/)\n",
+        "from pathlib import Path\n",
+        "import yaml\n",
+        "try:\n",
+        "    with open(Path(\"config/data_root.yml\")) as f:\n",
+        "        cfg = yaml.safe_load(f)\n",
+        "    data_root = Path(cfg.get(\"data_root\", \"data\")).expanduser().resolve()\n",
+        "except Exception:\n",
+        "    data_root = Path(\"data\")"
       ],
       "id": "setup"
     },
@@ -61,7 +71,7 @@
         "\n",
         "### 1.1 Load Bloomberg Database"
       ],
-      "id": "6273c8a8-754a-48f0-823d-d2652c3064d9"
+      "id": "92657ad8-a747-45de-b111-171ef2aa3ff2"
     },
     {
       "cell_type": "code",
@@ -73,6 +83,7 @@
         "from pathlib import Path\n",
         "COLAB_DB_URL = \"https://raw.githubusercontent.com/quinfer/fin510-colab-notebooks/main/resources/bloomberg_database.parquet\"\n",
         "_candidates = [\n",
+        "    data_root / \"bloomberg_database/bloomberg_database.parquet\",\n",
         "    Path(\"data/bloomberg_database/bloomberg_database.parquet\"),   # project root\n",
         "    Path(\"../data/bloomberg_database/bloomberg_database.parquet\"), # labs/\n",
         "    Path(\"../../data/bloomberg_database/bloomberg_database.parquet\"), # labs/notebooks/\n",
@@ -99,7 +110,7 @@
         "\n",
         "**Task:** Compare SPY prices and returns to diagnose stationarity."
       ],
-      "id": "0571ff5d-6c87-4d92-83bb-a3388eabe14c"
+      "id": "98c43bf8-09b7-4f88-b17e-15c32da0f6b7"
     },
     {
       "cell_type": "code",
@@ -150,7 +161,7 @@
         "**Stationary**: ACF drops quickly to zero - **Non-stationary**: ACF\n",
         "decays slowly"
       ],
-      "id": "62c1d3c8-5240-4581-b3e2-6439305847d1"
+      "id": "21869694-5c78-424e-8e1b-7dd43e32bac2"
     },
     {
       "cell_type": "code",
@@ -190,7 +201,7 @@
         "stationary - **Decision**: If p-value \\< 0.05, reject null → series is\n",
         "stationary"
       ],
-      "id": "97ac86c2-39d8-43ae-974e-e4e527a7f19f"
+      "id": "04d533ba-ac08-45b8-97be-b88cd8233340"
     },
     {
       "cell_type": "code",
@@ -236,7 +247,7 @@
         "\n",
         "**Your task:** Apply the same diagnostics to the VIX index."
       ],
-      "id": "c465dc56-278d-4861-9b29-1cc7893b21cf"
+      "id": "419e5e29-6df9-4cfc-90f4-25c12128f665"
     },
     {
       "cell_type": "code",
@@ -294,7 +305,7 @@
         "Remember from the slides: returns are unpredictable, but **volatility**\n",
         "is predictable."
       ],
-      "id": "227ee78d-2b03-43a0-9cfd-e599f842da9d"
+      "id": "9c1c95fd-725c-408f-9eb3-2fafb656cd20"
     },
     {
       "cell_type": "code",
@@ -342,7 +353,7 @@
         "| MA(q)     | Cuts off after lag q | Exponential decay    |\n",
         "| ARMA(p,q) | Both decay           | Both decay           |"
       ],
-      "id": "9ad2e7d9-399a-4d26-9cd3-73c38ed93c68"
+      "id": "6ef17772-0dcb-41c5-82f4-eb45c4119ac1"
     },
     {
       "cell_type": "code",
@@ -384,7 +395,7 @@
         "\n",
         "Let’s fit an AR(1) model: $VIX_t = c + \\phi_1 VIX_{t-1} + \\varepsilon_t$"
       ],
-      "id": "7e4c683f-f61c-41a7-81bd-5f5c6c9972d2"
+      "id": "81ddd350-24d5-4d0f-8360-7df630ae719c"
     },
     {
       "cell_type": "code",
@@ -435,7 +446,7 @@
         "**less than 0.05**, we reject and should consider more lags or a\n",
         "different model (Tsay, 2010, Ch 2)."
       ],
-      "id": "33af71b3-aaca-4267-a85e-b02d05cce741"
+      "id": "dc2e6c5d-1292-4d7c-9bb1-09f71d89278c"
     },
     {
       "cell_type": "code",
@@ -495,7 +506,7 @@
         "**Your task:** SPY prices are non-stationary. Fit an ARIMA(1,1,0) model\n",
         "(random walk with drift)."
       ],
-      "id": "2a89c5a0-598f-4e57-a4c6-819e79d37331"
+      "id": "13dba953-6804-4889-abb0-51c972263640"
     },
     {
       "cell_type": "code",
@@ -538,7 +549,7 @@
         "Before fitting complex models, establish **naive** and **mean**\n",
         "baselines."
       ],
-      "id": "2788651a-0dd0-4038-949a-44066d19fec3"
+      "id": "79b62d21-71e0-4034-a5a0-4efd9d6c3774"
     },
     {
       "cell_type": "code",
@@ -599,7 +610,7 @@
         "\n",
         "Does AR(1) beat naive?"
       ],
-      "id": "5a7bd171-48aa-48c9-94da-c8721cbc17be"
+      "id": "598e370c-ebfc-497c-ab67-042ffd43c53a"
     },
     {
       "cell_type": "code",
@@ -655,7 +666,7 @@
         "\n",
         "Single train/test split is risky. Use **time series cross-validation**."
       ],
-      "id": "0848ac33-09ed-45c0-af78-a7da07a3f0e8"
+      "id": "f99de040-51e3-4874-a4dd-6bd4325ad2dc"
     },
     {
       "cell_type": "code",
@@ -725,7 +736,7 @@
         "of whether ARIMA adds value for the problem most practitioners care\n",
         "about."
       ],
-      "id": "1605ebb0-7c8b-4b31-977b-73b813e22b1c"
+      "id": "1bdc9032-81c8-4b3a-983a-fa09f515813a"
     },
     {
       "cell_type": "code",
@@ -814,7 +825,7 @@
         "Bitcoin is highly volatile and non-stationary. Test different ARIMA\n",
         "specifications."
       ],
-      "id": "a0e954ca-e1c3-4856-b345-6f77070a3c8c"
+      "id": "2abb688f-ec89-447e-a458-4162265b23ab"
     },
     {
       "cell_type": "code",
@@ -842,7 +853,7 @@
         "The 10-year Treasury yield may be mean-reverting or trending depending\n",
         "on the period."
       ],
-      "id": "4ea81e9e-a258-4aab-828e-d6594b19be5d"
+      "id": "93fb1d3e-720c-4304-9d48-c6f51c65676b"
     },
     {
       "cell_type": "code",
@@ -890,7 +901,7 @@
         "-   Hyndman, R. J., & Athanasopoulos, G. (2021). *Forecasting:\n",
         "    Principles and Practice*, 3rd ed."
       ],
-      "id": "43e8db03-ea72-4365-9531-ddcbe79b7cdd"
+      "id": "b4e406ba-b874-4127-800b-1cbe8232a52a"
     }
   ],
   "nbformat": 4,
