--- a/labs/lab02_apis.ipynb
+++ b/labs/lab02_apis.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "## Setup (Colab‑only installs)"
       ],
-      "id": "bf50805e-5b9d-47d5-b9a0-b411ac0dad06"
+      "id": "b6133993-f8d9-4e79-ae2b-96d0e174e1f3"
     },
     {
       "cell_type": "code",
@@ -48,7 +48,7 @@
         "except Exception:\n",
         "    !pip -q install yfinance pandas pandas-datareader"
       ],
-      "id": "ce30eda0"
+      "id": "eb3a69a6"
     },
     {
       "cell_type": "markdown",
@@ -121,7 +121,7 @@
         "\n",
         "### Step 1: Define robust fetching functions"
       ],
-      "id": "731e5d71-350d-4acf-a62e-e5e31ddcd6b9"
+      "id": "4c7a907f-8385-46bb-a6c7-92159573dfff"
     },
     {
       "cell_type": "code",
@@ -331,7 +331,7 @@
         "    \n",
         "    return pd.DataFrame(levels, index=dates, columns=symbols)"
       ],
-      "id": "b05b8ee9"
+      "id": "2ff17fdd"
     },
     {
       "cell_type": "markdown",
@@ -339,7 +339,7 @@
       "source": [
         "### Step 2: Execute three-tier fetching strategy"
       ],
-      "id": "b342dcdb-12c3-4258-b507-f976624a1bd5"
+      "id": "addc024d-ab02-4252-9d77-ccb51c52540c"
     },
     {
       "cell_type": "code",
@@ -377,7 +377,7 @@
         "print(f\"\\nLast 3 rows:\")\n",
         "print(prices.tail(3))"
       ],
-      "id": "9c3c8d32"
+      "id": "cd95c780"
     },
     {
       "cell_type": "markdown",
@@ -391,7 +391,7 @@
         "\n",
         "### Step 3: Validate data quality"
       ],
-      "id": "388ae819-6e97-41cd-9ca5-a2c4a416bc6b"
+      "id": "1173badd-de40-45dd-814f-04fb9477a0e3"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
         "else:\n",
         "    print(f\"\\n⚠ Warning: no data returned from any source\")"
       ],
-      "id": "d6bd411e"
+      "id": "adc5998e"
     },
     {
       "cell_type": "markdown",
@@ -468,7 +468,7 @@
         "\n",
         "### Step 1: Clean the data"
       ],
-      "id": "ca0390f5-2872-40b4-8d9e-4e94bdcfdc64"
+      "id": "ed10eedb-0387-4b64-9ca6-24502a9c9cee"
     },
     {
       "cell_type": "code",
@@ -500,7 +500,7 @@
         "print(f\"\\nCleaned returns (last 5 days):\")\n",
         "print(clean_clipped.tail())"
       ],
-      "id": "cf76f92c"
+      "id": "f0526b3c"
     },
     {
       "cell_type": "markdown",
@@ -515,7 +515,7 @@
         "\n",
         "### Step 2: Save cleaned data"
       ],
-      "id": "007de38e-f1a1-48e3-a165-72e9062bea82"
+      "id": "c84cb065-b6d8-4d8d-a253-4d4d8d63733b"
     },
     {
       "cell_type": "code",
@@ -547,7 +547,7 @@
         "print(f\"\\n=== Cleaning Summary ===\")\n",
         "print(json.dumps(cleaning_log, indent=2))"
       ],
-      "id": "1125bdbb"
+      "id": "470d93ce"
     },
     {
       "cell_type": "markdown",
@@ -579,7 +579,7 @@
         "This short exercise previews a factor dataset (JKP). Load a small sample\n",
         "CSV, compute quick stats, and (optionally) run a one‑line CAPM alpha."
       ],
-      "id": "60dcc8e9-49a5-4b12-83bf-efa8c6cfb782"
+      "id": "2475ddae-4e34-4ef4-819e-0451d4b4dedc"
     },
     {
       "cell_type": "code",
@@ -611,7 +611,7 @@
         "capm = sm.OLS(ls, sm.add_constant(mkt)).fit()\n",
         "float(capm.params['const']), float(capm.tvalues['const'])"
       ],
-      "id": "4047818d"
+      "id": "f37b05f6"
     },
     {
       "cell_type": "markdown",
@@ -623,7 +623,7 @@
         "\n",
         "## Quick Leakage Check (Practice)"
       ],
-      "id": "80cc464d-ff50-47a1-aacb-fce458e1a1d4"
+      "id": "8a5504f5-0378-4b1d-9f1e-9649dde888e4"
     },
     {
       "cell_type": "code",
@@ -648,7 +648,346 @@
         "df = pd.concat([X, y.rename('y')], axis=1).dropna()\n",
         "print(\"Rows after proper shift/drop:\", len(df))"
       ],
-      "id": "850c6565"
+      "id": "1be29a22"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Extension: Verify Stylised Facts (Optional)\n",
+        "\n",
+        "This extension connects to the lecture material on empirical\n",
+        "regularities in financial returns. Before analysing any financial\n",
+        "dataset, you should verify it exhibits the known stylised facts.\n",
+        "\n",
+        "> **The Five Stylised Facts**\n",
+        ">\n",
+        "> Financial returns consistently show:\n",
+        ">\n",
+        "> 1.  **Weak return autocorrelation** — returns are approximately\n",
+        ">     unpredictable\n",
+        "> 2.  **Volatility clustering** — high volatility periods cluster\n",
+        ">     together\n",
+        "> 3.  **Fat tails** — more extreme returns than Normal distribution\n",
+        ">     predicts\n",
+        "> 4.  **Negative skewness** — crashes are larger than melt-ups\n",
+        "> 5.  **Leverage effect** — negative returns increase subsequent\n",
+        ">     volatility\n",
+        ">\n",
+        "> These are empirical facts, not assumptions. Your data should exhibit\n",
+        "> them.\n",
+        "\n",
+        "### Check 1: Return Predictability (Autocorrelation)"
+      ],
+      "id": "b235d1fd-a24b-4018-90b8-64ee3341d07d"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from statsmodels.graphics.tsaplots import plot_acf\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Use one asset from your cleaned returns\n",
+        "returns_series = clean_clipped.iloc[:, 0].dropna()  # First column\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "# ACF of returns (should be weak)\n",
+        "ax1 = axes[0]\n",
+        "plot_acf(returns_series, lags=20, ax=ax1, alpha=0.05)\n",
+        "ax1.set_title('ACF: Returns (Should be Weak)')\n",
+        "ax1.set_xlabel('Lag (days)')\n",
+        "\n",
+        "# Scatter plot: r(t) vs r(t-1)\n",
+        "ax2 = axes[1]\n",
+        "ax2.scatter(returns_series.shift(1), returns_series, alpha=0.3, s=10)\n",
+        "ax2.axhline(y=0, color='gray', linestyle='--', lw=1)\n",
+        "ax2.axvline(x=0, color='gray', linestyle='--', lw=1)\n",
+        "ax2.set_xlabel('Return(t-1)')\n",
+        "ax2.set_ylabel('Return(t)')\n",
+        "ax2.set_title('Returns vs Lagged Returns')\n",
+        "ax2.grid(alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Quantify\n",
+        "lag1_corr = returns_series.autocorr(lag=1)\n",
+        "print(f\"\\nLag-1 autocorrelation: {lag1_corr:.4f}\")\n",
+        "print(\"Interpretation: Near zero → returns are approximately unpredictable\")"
+      ],
+      "id": "d315d72a"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> **What to Look For**\n",
+        ">\n",
+        "> -   Most ACF lags should be within confidence bands (blue shaded\n",
+        ">     region)\n",
+        "> -   Lag-1 correlation typically \\< 0.1 in absolute value\n",
+        "> -   Scatter plot shows no clear pattern\n",
+        "> -   **Why this matters**: If returns were highly predictable, everyone\n",
+        ">     would exploit it (efficient markets hypothesis)\n",
+        "\n",
+        "### Check 2: Volatility Clustering"
+      ],
+      "id": "d177834b-fbe8-4964-b711-f8fd1d0c93ef"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Compare ACF of returns vs squared returns (volatility proxy)\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "ax1 = axes[0]\n",
+        "plot_acf(returns_series, lags=20, ax=ax1, alpha=0.05)\n",
+        "ax1.set_title('ACF: Returns (Weak)')\n",
+        "\n",
+        "ax2 = axes[1]\n",
+        "plot_acf(returns_series**2, lags=20, ax=ax2, alpha=0.05)\n",
+        "ax2.set_title('ACF: Squared Returns (Strong = Clustering)')\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Quantify\n",
+        "acf_ret_lag1 = returns_series.autocorr(lag=1)\n",
+        "acf_sq_lag1 = (returns_series**2).autocorr(lag=1)\n",
+        "\n",
+        "print(f\"\\nReturns ACF(1): {acf_ret_lag1:.4f}\")\n",
+        "print(f\"Squared returns ACF(1): {acf_sq_lag1:.4f}\")\n",
+        "print(\"\\nInterpretation: Squared returns show strong persistence → volatility clustering\")\n",
+        "print(\"This is why GARCH models are needed for volatility forecasting\")"
+      ],
+      "id": "1a73bbe0"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> **What to Look For**\n",
+        ">\n",
+        "> -   **Returns ACF**: Most lags within confidence bands\n",
+        "> -   **Squared returns ACF**: Many lags exceed confidence bands →\n",
+        ">     persistence\n",
+        "> -   **Why this matters**: Volatility today predicts volatility\n",
+        ">     tomorrow (useful for risk management)\n",
+        "\n",
+        "### Check 3: Fat Tails (Excess Kurtosis)"
+      ],
+      "id": "394e2293-81cb-4281-af8c-b0e31136cc32"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from scipy import stats\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+        "\n",
+        "# Q-Q plot (curved ends = fat tails)\n",
+        "ax1 = axes[0]\n",
+        "stats.probplot(returns_series, dist=\"norm\", plot=ax1)\n",
+        "ax1.set_title('Q-Q Plot: Returns vs Normal Distribution')\n",
+        "ax1.grid(alpha=0.3)\n",
+        "\n",
+        "# Histogram vs Normal\n",
+        "ax2 = axes[1]\n",
+        "ax2.hist(returns_series, bins=50, density=True, alpha=0.7, \n",
+        "         color='steelblue', label='Empirical', edgecolor='black')\n",
+        "x = np.linspace(returns_series.min(), returns_series.max(), 100)\n",
+        "ax2.plot(x, stats.norm.pdf(x, returns_series.mean(), returns_series.std()),\n",
+        "         'r-', lw=2, label='Normal')\n",
+        "ax2.set_xlabel('Daily Return')\n",
+        "ax2.set_ylabel('Density')\n",
+        "ax2.set_title('Distribution: Empirical vs Normal')\n",
+        "ax2.legend()\n",
+        "ax2.grid(alpha=0.3)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "# Quantify\n",
+        "kurtosis = returns_series.kurtosis()\n",
+        "_, p_norm = stats.normaltest(returns_series)\n",
+        "\n",
+        "print(f\"\\nExcess kurtosis: {kurtosis:.2f} (Normal = 0)\")\n",
+        "print(f\"Normality test p-value: {p_norm:.4f}\")\n",
+        "if p_norm < 0.05:\n",
+        "    print(\"→ Reject normality: fat tails are present\")\n",
+        "else:\n",
+        "    print(\"→ Cannot reject normality (unusual for financial data)\")"
+      ],
+      "id": "43d3e764"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> **What to Look For**\n",
+        ">\n",
+        "> -   **Q-Q plot**: Points curve away from line at both ends (S-shape)\n",
+        "> -   **Kurtosis**: Typically 3-10 for financial returns (vs 0 for\n",
+        ">     Normal)\n",
+        "> -   **Normality test**: p \\< 0.05 → reject normality\n",
+        "> -   **Why this matters**: Normal-based VaR underestimates tail risk\n",
+        "\n",
+        "### Check 4: Negative Skewness"
+      ],
+      "id": "7f63035e-486a-4e0f-b30b-5b97d165033c"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Skewness analysis\n",
+        "skewness = returns_series.skew()\n",
+        "\n",
+        "# Compare tail quantiles\n",
+        "left_5pct = float(returns_series.quantile(0.05))\n",
+        "right_5pct = float(returns_series.quantile(0.95))\n",
+        "median_val = float(returns_series.median())\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "ax.hist(returns_series, bins=50, alpha=0.7, color='steelblue', edgecolor='black')\n",
+        "ax.axvline(x=left_5pct, color='red', linestyle='--', lw=2, \n",
+        "           label=f'5th %ile: {left_5pct:.4f}')\n",
+        "ax.axvline(x=right_5pct, color='green', linestyle='--', lw=2, \n",
+        "           label=f'95th %ile: {right_5pct:.4f}')\n",
+        "ax.axvline(x=median_val, color='gray', linestyle='-', lw=1, label='Median')\n",
+        "ax.set_xlabel('Daily Return')\n",
+        "ax.set_ylabel('Frequency')\n",
+        "ax.set_title('Return Distribution: Checking for Skewness')\n",
+        "ax.legend()\n",
+        "ax.grid(alpha=0.3, axis='y')\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "print(f\"\\nSkewness: {skewness:.3f}\")\n",
+        "if skewness < 0:\n",
+        "    print(\"→ Negative skewness: left tail is longer (crashes > melt-ups)\")\n",
+        "else:\n",
+        "    print(\"→ Positive skewness: right tail is longer (unusual)\")\n",
+        "    \n",
+        "print(f\"\\nLeft tail (5th %ile): {left_5pct:.4f}\")\n",
+        "print(f\"Right tail (95th %ile): {right_5pct:.4f}\")\n",
+        "print(f\"Tail asymmetry: {abs(left_5pct) / abs(right_5pct):.2f}\")"
+      ],
+      "id": "2f6376ee"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> **What to Look For**\n",
+        ">\n",
+        "> -   **Skewness**: Typically -0.5 to -2.0 for equity returns\n",
+        "> -   **Left tail**: Should extend further than right tail\n",
+        "> -   **Why this matters**: Downside risk is larger than upside\n",
+        ">     potential (asymmetric risk)\n",
+        "\n",
+        "### Check 5: Summary and Interpretation"
+      ],
+      "id": "38b3b89a-ac30-4c71-a1e6-26ac398d8671"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Summary of all stylised facts\n",
+        "print(\"=\" * 60)\n",
+        "print(\"STYLISED FACTS VERIFICATION SUMMARY\")\n",
+        "print(\"=\" * 60)\n",
+        "\n",
+        "print(f\"\\n1. Return Autocorrelation (Lag 1): {acf_ret_lag1:.4f}\")\n",
+        "if abs(acf_ret_lag1) < 0.1:\n",
+        "    print(\"   ✓ PASS: Weak autocorrelation (returns unpredictable)\")\n",
+        "else:\n",
+        "    print(\"   ⚠ CHECK: Strong autocorrelation detected\")\n",
+        "\n",
+        "print(f\"\\n2. Volatility Clustering ACF (Lag 1): {acf_sq_lag1:.4f}\")\n",
+        "if acf_sq_lag1 > 0.1:\n",
+        "    print(\"   ✓ PASS: Volatility clustering present\")\n",
+        "else:\n",
+        "    print(\"   ⚠ CHECK: Weak volatility clustering\")\n",
+        "\n",
+        "print(f\"\\n3. Excess Kurtosis: {kurtosis:.2f}\")\n",
+        "if kurtosis > 1:\n",
+        "    print(\"   ✓ PASS: Fat tails present (kurtosis > 1)\")\n",
+        "else:\n",
+        "    print(\"   ⚠ CHECK: Tails may not be fat enough\")\n",
+        "\n",
+        "print(f\"\\n4. Skewness: {skewness:.3f}\")\n",
+        "if skewness < 0:\n",
+        "    print(\"   ✓ PASS: Negative skewness (crash risk > upside)\")\n",
+        "else:\n",
+        "    print(\"   ⚠ CHECK: Positive or zero skewness (unusual)\")\n",
+        "\n",
+        "print(f\"\\n5. Normality Test p-value: {p_norm:.4f}\")\n",
+        "if p_norm < 0.05:\n",
+        "    print(\"   ✓ PASS: Non-normal distribution (expected)\")\n",
+        "else:\n",
+        "    print(\"   ⚠ CHECK: Cannot reject normality (unusual for returns)\")\n",
+        "\n",
+        "print(\"\\n\" + \"=\" * 60)\n",
+        "print(\"\\nIf your data passes most checks, it exhibits realistic properties.\")\n",
+        "print(\"If not, investigate: data errors? wrong frequency? synthetic data?\")"
+      ],
+      "id": "a614dc84"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> **Deliverable (Optional Extension)**\n",
+        ">\n",
+        "> Write a brief note (150-200 words) answering:\n",
+        ">\n",
+        "> 1.  Which stylised facts does your data exhibit?\n",
+        "> 2.  Are there any surprising deviations from expected patterns?\n",
+        "> 3.  What are the implications for modelling this data?\n",
+        ">\n",
+        "> Submit via Blackboard if completing for credit.\n",
+        "\n",
+        "> **Connection to Lectures**\n",
+        ">\n",
+        "> This extension directly applies concepts from:\n",
+        ">\n",
+        "> -   **Week 2 slides**: Part IV (EDA) and Part V (Stylised Facts)\n",
+        "> -   **Week 3-4**: Time series properties, volatility modelling\n",
+        "> -   **Assessment**: Understanding data properties before modelling is\n",
+        ">     essential for all coursework\n",
+        "\n",
+        "## Summary and Next Steps\n",
+        "\n",
+        "You’ve now built a complete data pipeline with:\n",
+        "\n",
+        "-   ✅ Resilient data fetching (retries, fallbacks)\n",
+        "-   ✅ Data validation (missing values, outliers, range checks)\n",
+        "-   ✅ Provenance logging (documentation and reproducibility)\n",
+        "-   ✅ Optional: Stylised facts verification\n",
+        "\n",
+        "**These patterns transfer to all financial data work** — use them in\n",
+        "every future analysis.\n",
+        "\n",
+        "**Next lab**: Quantify survivorship bias using Bloomberg Terminal\n",
+        "(in-class) or explore alternative data sources (homework extension)."
+      ],
+      "id": "9ab4d060-5071-4fa6-b70e-833ebbe0864d"
     }
   ],
   "nbformat": 4,
