update notebooks and Bloomberg DB

--- a/labs/lab02_apis.ipynb
+++ b/labs/lab02_apis.ipynb
@@ -10,9 +10,10 @@
         "\n",
         "> **Lab Versions**\n",
         ">\n",
-        "> This is the **Colab version** using free APIs (yfinance). For\n",
-        "> Bloomberg Terminal access in the Financial Innovation Lab, see [Lab 2:\n",
-        "> Bloomberg Version](lab02_bloomberg.qmd).\n",
+        "> This is the **Colab version** using free APIs (yfinance). For the\n",
+        "> **in-class** Bloomberg Terminal session (Excel add-in), see [Lab 2:\n",
+        "> Survivorship Bias in UK\n",
+        "> Banking](lab02_survivorship_bias_bloomberg.qmd).\n",
         ">\n",
         "> **Expected Time:**\n",
         ">\n",
@@ -29,13 +30,14 @@
         "> **Bloomberg Terminal Access**\n",
         ">\n",
         "> Ulster students have access to ~20 Bloomberg terminals in the\n",
-        "> Financial Innovation Lab. If you’re interested in comparing\n",
-        "> professional-grade data with free APIs, check out the [Bloomberg\n",
-        "> Terminal version of this lab](lab02_bloomberg.qmd).\n",
+        "> Financial Innovation Lab. The **in-class** Week 2 lab uses the\n",
+        "> **Bloomberg Excel add-in** to quantify survivorship bias with UK\n",
+        "> banking crisis data: [Lab 2: Survivorship Bias in UK\n",
+        "> Banking](lab02_survivorship_bias_bloomberg.qmd).\n",
         "\n",
         "## Setup (Colab‑only installs)"
       ],
-      "id": "b6133993-f8d9-4e79-ae2b-96d0e174e1f3"
+      "id": "432cea69-b184-4a8f-a0f3-3e7fc9ad2280"
     },
     {
       "cell_type": "code",
@@ -48,7 +50,7 @@
         "except Exception:\n",
         "    !pip -q install yfinance pandas pandas-datareader"
       ],
-      "id": "eb3a69a6"
+      "id": "45ff2f89"
     },
     {
       "cell_type": "markdown",
@@ -121,7 +123,7 @@
         "\n",
         "### Step 1: Define robust fetching functions"
       ],
-      "id": "4c7a907f-8385-46bb-a6c7-92159573dfff"
+      "id": "792502f9-40e7-4942-b559-5830140e7a19"
     },
     {
       "cell_type": "code",
@@ -331,7 +333,7 @@
         "    \n",
         "    return pd.DataFrame(levels, index=dates, columns=symbols)"
       ],
-      "id": "2ff17fdd"
+      "id": "cf17f498"
     },
     {
       "cell_type": "markdown",
@@ -339,7 +341,7 @@
       "source": [
         "### Step 2: Execute three-tier fetching strategy"
       ],
-      "id": "addc024d-ab02-4252-9d77-ccb51c52540c"
+      "id": "b61d0421-75bc-45b4-9103-ad1186d45528"
     },
     {
       "cell_type": "code",
@@ -377,7 +379,7 @@
         "print(f\"\\nLast 3 rows:\")\n",
         "print(prices.tail(3))"
       ],
-      "id": "cd95c780"
+      "id": "76d1ad1b"
     },
     {
       "cell_type": "markdown",
@@ -391,7 +393,7 @@
         "\n",
         "### Step 3: Validate data quality"
       ],
-      "id": "1173badd-de40-45dd-814f-04fb9477a0e3"
+      "id": "2638840a-1bc0-4059-922c-4ce02e627780"
     },
     {
       "cell_type": "code",
@@ -430,7 +432,7 @@
         "else:\n",
         "    print(f\"\\n⚠ Warning: no data returned from any source\")"
       ],
-      "id": "adc5998e"
+      "id": "dfe306d9"
     },
     {
       "cell_type": "markdown",
@@ -468,7 +470,7 @@
         "\n",
         "### Step 1: Clean the data"
       ],
-      "id": "ed10eedb-0387-4b64-9ca6-24502a9c9cee"
+      "id": "ed7978a1-13b6-4cf7-8f5a-b7fb719c7aeb"
     },
     {
       "cell_type": "code",
@@ -500,7 +502,7 @@
         "print(f\"\\nCleaned returns (last 5 days):\")\n",
         "print(clean_clipped.tail())"
       ],
-      "id": "f0526b3c"
+      "id": "31378a60"
     },
     {
       "cell_type": "markdown",
@@ -515,7 +517,7 @@
         "\n",
         "### Step 2: Save cleaned data"
       ],
-      "id": "c84cb065-b6d8-4d8d-a253-4d4d8d63733b"
+      "id": "a912740b-6e2c-436b-b1c5-968a818c969b"
     },
     {
       "cell_type": "code",
@@ -547,7 +549,7 @@
         "print(f\"\\n=== Cleaning Summary ===\")\n",
         "print(json.dumps(cleaning_log, indent=2))"
       ],
-      "id": "470d93ce"
+      "id": "73fe7fd3"
     },
     {
       "cell_type": "markdown",
@@ -579,7 +581,7 @@
         "This short exercise previews a factor dataset (JKP). Load a small sample\n",
         "CSV, compute quick stats, and (optionally) run a one‑line CAPM alpha."
       ],
-      "id": "2475ddae-4e34-4ef4-819e-0451d4b4dedc"
+      "id": "e3de3e29-448b-410e-8c58-19af1af2351d"
     },
     {
       "cell_type": "code",
@@ -611,7 +613,7 @@
         "capm = sm.OLS(ls, sm.add_constant(mkt)).fit()\n",
         "float(capm.params['const']), float(capm.tvalues['const'])"
       ],
-      "id": "f37b05f6"
+      "id": "e93f4452"
     },
     {
       "cell_type": "markdown",
@@ -623,7 +625,7 @@
         "\n",
         "## Quick Leakage Check (Practice)"
       ],
-      "id": "8a5504f5-0378-4b1d-9f1e-9649dde888e4"
+      "id": "997cccc7-11be-4ffe-9602-277119732dec"
     },
     {
       "cell_type": "code",
@@ -648,7 +650,7 @@
         "df = pd.concat([X, y.rename('y')], axis=1).dropna()\n",
         "print(\"Rows after proper shift/drop:\", len(df))"
       ],
-      "id": "1be29a22"
+      "id": "4d86fafb"
     },
     {
       "cell_type": "markdown",
@@ -679,7 +681,7 @@
         "\n",
         "### Check 1: Return Predictability (Autocorrelation)"
       ],
-      "id": "b235d1fd-a24b-4018-90b8-64ee3341d07d"
+      "id": "9fc0c822-7e87-426e-a48e-8451c9bef902"
     },
     {
       "cell_type": "code",
@@ -719,7 +721,7 @@
         "print(f\"\\nLag-1 autocorrelation: {lag1_corr:.4f}\")\n",
         "print(\"Interpretation: Near zero → returns are approximately unpredictable\")"
       ],
-      "id": "d315d72a"
+      "id": "0fc5a271"
     },
     {
       "cell_type": "markdown",
@@ -736,7 +738,7 @@
         "\n",
         "### Check 2: Volatility Clustering"
       ],
-      "id": "d177834b-fbe8-4964-b711-f8fd1d0c93ef"
+      "id": "09b4c2d6-8551-4e2e-9e93-e67a90d3da00"
     },
     {
       "cell_type": "code",
@@ -767,7 +769,7 @@
         "print(\"\\nInterpretation: Squared returns show strong persistence → volatility clustering\")\n",
         "print(\"This is why GARCH models are needed for volatility forecasting\")"
       ],
-      "id": "1a73bbe0"
+      "id": "d766b9a3"
     },
     {
       "cell_type": "markdown",
@@ -783,7 +785,7 @@
         "\n",
         "### Check 3: Fat Tails (Excess Kurtosis)"
       ],
-      "id": "394e2293-81cb-4281-af8c-b0e31136cc32"
+      "id": "5f37cb29-622f-44e6-841c-8111af5dd48f"
     },
     {
       "cell_type": "code",
@@ -828,7 +830,7 @@
         "else:\n",
         "    print(\"→ Cannot reject normality (unusual for financial data)\")"
       ],
-      "id": "43d3e764"
+      "id": "688c1c1c"
     },
     {
       "cell_type": "markdown",
@@ -844,7 +846,7 @@
         "\n",
         "### Check 4: Negative Skewness"
       ],
-      "id": "7f63035e-486a-4e0f-b30b-5b97d165033c"
+      "id": "e55b2a82-cd31-47fb-8112-803f15fe350b"
     },
     {
       "cell_type": "code",
@@ -885,7 +887,7 @@
         "print(f\"Right tail (95th %ile): {right_5pct:.4f}\")\n",
         "print(f\"Tail asymmetry: {abs(left_5pct) / abs(right_5pct):.2f}\")"
       ],
-      "id": "2f6376ee"
+      "id": "86ba3957"
     },
     {
       "cell_type": "markdown",
@@ -900,7 +902,7 @@
         "\n",
         "### Check 5: Summary and Interpretation"
       ],
-      "id": "38b3b89a-ac30-4c71-a1e6-26ac398d8671"
+      "id": "c5862f1c-abdb-4b87-bc8b-afd1cf17d4ba"
     },
     {
       "cell_type": "code",
@@ -947,7 +949,7 @@
         "print(\"\\nIf your data passes most checks, it exhibits realistic properties.\")\n",
         "print(\"If not, investigate: data errors? wrong frequency? synthetic data?\")"
       ],
-      "id": "a614dc84"
+      "id": "3f8cc918"
     },
     {
       "cell_type": "markdown",
@@ -984,10 +986,11 @@
         "**These patterns transfer to all financial data work** — use them in\n",
         "every future analysis.\n",
         "\n",
-        "**Next lab**: Quantify survivorship bias using Bloomberg Terminal\n",
-        "(in-class) or explore alternative data sources (homework extension)."
+        "**Next lab**: [Quantify survivorship bias using Bloomberg\n",
+        "Terminal](lab02_survivorship_bias_bloomberg.qmd) (in-class, Excel\n",
+        "add-in) or explore alternative data sources (homework extension)."
       ],
-      "id": "9ab4d060-5071-4fa6-b70e-833ebbe0864d"
+      "id": "63f91c1c-0b19-449b-9f80-8b2518ee5f89"
     }
   ],
   "nbformat": 4,
