--- a/labs/lab02_bloomberg.ipynb
+++ b/labs/lab02_bloomberg.ipynb
@@ -6,26 +6,24 @@
       "source": [
         "# Lab 2: Data Acquisition with Bloomberg Terminal\n",
         "\n",
-        "Professional-Grade Data Pipelines in the Financial Innovation Lab\n",
+        "Professional-Grade Data Pipelines (Python API — Experimental)\n",
         "\n",
-        "> **Bloomberg Terminal Lab**\n",
+        "> **Not Currently Used In-Class**\n",
         ">\n",
-        "> This lab is designed for use **in the Financial Innovation Lab** with\n",
-        "> Bloomberg Terminal access. You’ll work with professional-grade data\n",
-        "> and compare it to free API sources.\n",
+        "> This lab uses the **Bloomberg Python API** (`blpapi` / `bbg-edu`),\n",
+        "> which has **not yet been fully tested** for use in the Financial\n",
+        "> Innovation Lab. **For in-class Bloomberg sessions we use the Excel\n",
+        "> add-in.** See [Lab 2: Survivorship Bias in UK\n",
+        "> Banking](lab02_survivorship_bias_bloomberg.qmd) for the lab run in the\n",
+        "> Financial Innovation Lab (Bloomberg Excel add-in, BDH formulas).\n",
+        "\n",
+        "> **For Developers / Future Use**\n",
         ">\n",
-        "> **Prerequisites:**\n",
-        ">\n",
-        "> -   Bloomberg Terminal software running\n",
-        "> -   Logged into Bloomberg\n",
-        "> -   `bbg-edu` educational package (includes `blpapi` wrapper)\n",
-        "> -   Anaconda/Spyder recommended\n",
-        ">\n",
-        "> **Installation:**\n",
-        ">\n",
-        "> ``` bash\n",
-        "> pip install git+https://github.com/quinfer/bloomberg-edu.git\n",
-        "> ```\n",
+        "> This lab is retained for when the Bloomberg Desktop API is validated\n",
+        "> in the lab environment. Prerequisites: Bloomberg Terminal running,\n",
+        "> `bbg-edu` package\n",
+        "> (`pip install git+https://github.com/quinfer/bloomberg-edu.git`),\n",
+        "> Anaconda/Spyder recommended.\n",
         "\n",
         "## Before You Start: The Big Picture\n",
         "\n",
@@ -96,7 +94,7 @@
         "\n",
         "### 2. Python Environment Check"
       ],
-      "id": "2111080e-ff66-4a43-bab1-6dc845e5d115"
+      "id": "73aba43c-5506-40b3-a4a9-bcdde3749ac4"
     },
     {
       "cell_type": "code",
@@ -135,7 +133,7 @@
         "    except ImportError:\n",
         "        print(f\"✗ {pkg} - install with: pip install {pkg}\")"
       ],
-      "id": "f965836b"
+      "id": "a8dc5f69"
     },
     {
       "cell_type": "markdown",
@@ -148,7 +146,7 @@
         "We’ll use the `bbg-edu` educational package, which provides a clean\n",
         "interface to Bloomberg’s Desktop API:"
       ],
-      "id": "aa55d935-aa36-4e24-9f13-9fae1dfe7a13"
+      "id": "352ca690-0270-430a-bf07-22dc5e9428b5"
     },
     {
       "cell_type": "code",
@@ -173,7 +171,7 @@
         "print(\"✓ Bloomberg client initialized\")\n",
         "print(\"✓ Ready to fetch data\")"
       ],
-      "id": "edf42d6b"
+      "id": "d05ac1f0"
     },
     {
       "cell_type": "markdown",
@@ -181,7 +179,7 @@
       "source": [
         "### Task 1.2: Pull Historical Data for Core Equities"
       ],
-      "id": "2a18a462-d1a6-40aa-98bc-563bcedd1383"
+      "id": "dfbf54ae-0c20-4941-a072-ba73a744f12e"
     },
     {
       "cell_type": "code",
@@ -235,7 +233,7 @@
         "bbg_data.to_csv('bloomberg_data.csv', index=False)\n",
         "print(\"\\n✓ Saved to bloomberg_data.csv\")"
       ],
-      "id": "c36d018a"
+      "id": "e24d6ed8"
     },
     {
       "cell_type": "markdown",
@@ -243,7 +241,7 @@
       "source": [
         "### Task 1.3: Explore Bloomberg Data Quality"
       ],
-      "id": "494ca3b5-1e14-4c21-ba34-c2225de26019"
+      "id": "a8fb43f6-11f9-4e60-b6e2-595ab369d3a5"
     },
     {
       "cell_type": "code",
@@ -284,7 +282,7 @@
         "    print(f\"  Extreme returns (>20%): {extreme_returns}\")\n",
         "    print(f\"  High<Low violations: {high_low_violations}\")"
       ],
-      "id": "b8abe1ba"
+      "id": "3e440da9"
     },
     {
       "cell_type": "markdown",
@@ -294,7 +292,7 @@
         "\n",
         "### Task 2.1: Download Same Data from yfinance"
       ],
-      "id": "3f33c3b3-71c7-46c2-bb20-8c8a84a82615"
+      "id": "02f21a2f-9416-43fb-991f-a9f12860e6c6"
     },
     {
       "cell_type": "code",
@@ -407,7 +405,7 @@
         "print(f\"\\n✓ Downloaded {len(yf_combined)} rows from Yahoo Finance\")\n",
         "print(f\"✓ Saved to yfinance_data.csv\")"
       ],
-      "id": "b07b910b"
+      "id": "44e7c149"
     },
     {
       "cell_type": "markdown",
@@ -415,7 +413,7 @@
       "source": [
         "### Task 2.2: Yahoo Finance Data Quality"
       ],
-      "id": "25c8f89c-7ecb-47dd-9eb2-1f10d2438a18"
+      "id": "6d8e0ada-2771-4187-bef5-5583d859b7c6"
     },
     {
       "cell_type": "code",
@@ -450,7 +448,7 @@
         "    print(f\"  Extreme returns (>20%): {extreme_returns}\")\n",
         "    print(f\"  High<Low violations: {high_low_violations}\")"
       ],
-      "id": "c88895c4"
+      "id": "24743c32"
     },
     {
       "cell_type": "markdown",
@@ -460,7 +458,7 @@
         "\n",
         "### Task 3.1: Direct Price Comparison"
       ],
-      "id": "51dc732a-b2df-44e2-bac9-91e3aace4556"
+      "id": "a74e4c52-2418-499a-9897-c2fe34fb812f"
     },
     {
       "cell_type": "code",
@@ -525,7 +523,7 @@
         "\n",
         "print(\"\\n✓ Saved comparison chart to bloomberg_vs_yfinance_comparison.png\")"
       ],
-      "id": "0965b96f"
+      "id": "dd3c7831"
     },
     {
       "cell_type": "markdown",
@@ -533,7 +531,7 @@
       "source": [
         "### Task 3.2: Coverage and Completeness Analysis"
       ],
-      "id": "25799a59-1a22-4f44-b845-394c99a6b59e"
+      "id": "1379bfde-fc08-4141-b839-defdcc2951d1"
     },
     {
       "cell_type": "code",
@@ -573,7 +571,7 @@
         "    if only_yf:\n",
         "        print(f\"  Example Yahoo-only dates: {sorted(list(only_yf))[:3]}\")"
       ],
-      "id": "ccb98767"
+      "id": "8c5da6db"
     },
     {
       "cell_type": "markdown",
@@ -583,7 +581,7 @@
         "\n",
         "### Task 4.1: Create Unified Data Pipeline"
       ],
-      "id": "3ad09068-3309-44c3-b25f-2604ec092319"
+      "id": "d46ca91b-8129-4b87-954d-73fe42aa64fa"
     },
     {
       "cell_type": "code",
@@ -841,7 +839,7 @@
         "else:\n",
         "    print(\"Bloomberg failed; would use yfinance fallback in production\")"
       ],
-      "id": "55a51ae3"
+      "id": "b72fddfe"
     },
     {
       "cell_type": "markdown",
@@ -973,7 +971,7 @@
         "> -   Bloomberg Terminal bookings: Contact lab staff\n",
         "> -   Technical support: Office hours or lab assistants"
       ],
-      "id": "58f4c375-fb2b-46ce-8c89-e6096db431e3"
+      "id": "e1f298b2-57de-4a8f-943e-c8b534a73cc1"
     }
   ],
   "nbformat": 4,
